# advent_of_code_2025

./: CMakeLists.txt  main.cpp
solutions/: solution1.cpp  solution1.h  solution2.cpp  solution2.h  solution3.cpp  solution3.h  solutions.cpp  solutions.h
utils/: read.cpp  read.h
