cmake_minimum_required(VERSION 3.20.0)
project(aoc25)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})

set(SOURCES
    main.cpp

    solutions/solutions.cpp
    solutions/solution1.cpp

    utils/read.cpp
)

set(INPUTS
    inputs/input1.txt
)

add_executable(aoc25 ${SOURCES})

install(TARGETS aoc25 RUNTIME DESTINATION "install" )
install(FILES ${INPUTS} DESTINATION "install/inputs")